I finished up the contents for the first part of the MQ2 tutorial. I added a notes text file to try and keep track of different ideas to add or things to fix. I added a folder for non-image files pertaining to the tutorials.

--- a/files/tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini
+++ b/files/tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini
@@ -19,4 +19,8 @@ provokeonce=1
 resume=75
 stickrange=75
 taunt=1
+holyshit0=/if (${Me.AbilityReady[Initmidation]} && (${Target.PctHPs} <= 25)) /doability 1
+holyshit1=/if (${Me.CombatAbilityReady[Cleaving Anger Discipline]} && ${Target.Name.Find[#]}) /disc Cleaving Anger Discipline
+holyshit2=/if (${Me.AltAbilityReady[Boastful Bellow]}) /casting “Boastful Bellow” alt
+holyshit3=/if (${Cast.Ready[The Composer]}) /casting “The Composer” item
 version=6.020
