Changed the font sizes on 'Required Materials' and the subsection links to try and decrease space.

--- a/tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini
+++ b/tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini
@@ -19,6 +19,10 @@ provokeonce = 1
 resume = 75
 stickrange = 75
 taunt = 1
+holyflag0 = 1
+holyflag1 = 1
+holyflag2 = 1
+holyflag3 = 1
 holyshit0 = /if (${Me.AbilityReady[Initmidation]} && (${Target.PctHPs} <=  25)) /doability 1
 holyshit1 = /if (${Me.CombatAbilityReady[Cleaving Anger Discipline]} && ${Target.Name.Find[#]}) /disc Cleaving Anger Discipline
 holyshit2 = /if (${Me.AltAbilityReady[Boastful Bellow]}) /casting “Boastful Bellow” alt
